Process spawning not working on Mac OS so add python-shell package.

--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
 	},
 	"dependencies": {
 		"electron-compile": "^6.4.4",
-		"electron-compiler": "^1.0.9"
+		"electron-compiler": "^1.0.9",
+		"python-shell": "1.0.8"
 	}
 }
