--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "version": "0.3.0",
     "publisher": "orpheeantoniadis",
     "repository": "https://github.com/orpheeantoniadis/vscode-hl2.git",
-    "icon": "./resources/images/icon.png",
+    "icon": "icon.png",
     "galleryBanner": {
         "color": "#1e415e",
         "theme": "dark"
