--- a/package.json
+++ b/package.json
@@ -2,16 +2,16 @@
     "name": "hl2",
     "displayName": "hepiaLight2",
     "description": "Run Python code on hepiaLight2",
-    "version": "0.3.8",
+    "version": "0.4.0",
     "publisher": "orpheeantoniadis",
     "repository": "https://github.com/orpheeantoniadis/vscode-hl2.git",
     "icon": "icon.png",
     "galleryBanner": {
-        "color": "#1e415e",
+        "color": "#046594",
         "theme": "dark"
     },
     "engines": {
-        "vscode": "^1.22.0"
+        "vscode": "^1.40.0"
     },
     "categories": [
         "Other"
@@ -27,8 +27,8 @@
                 "title": "Run current file on hepiaLight2",
                 "category": "hepiaLight2",
                 "icon": {
-                    "light": "./resources/icons/light/run-file.svg",
-                    "dark": "./resources/icons/dark/run-file.svg"
+                    "light": "./resources/icons/light/debug-start.svg",
+                    "dark": "./resources/icons/dark/debug-start.svg"
                 }
             },
             {
@@ -36,8 +36,8 @@
                 "title": "Update hepiaLight2",
                 "category": "hepiaLight2",
                 "icon": {
-                    "light": "./resources/icons/light/refresh.svg",
-                    "dark": "./resources/icons/dark/refresh.svg"
+                    "light": "./resources/icons/light/debug-restart.svg",
+                    "dark": "./resources/icons/dark/debug-restart.svg"
                 }
             }
         ],
