--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "hl2",
     "displayName": "hepiaLight2",
     "description": "Run Python code on hepiaLight2",
-    "version": "0.4.0",
+    "version": "0.4.1",
     "publisher": "orpheeantoniadis",
     "repository": "https://github.com/orpheeantoniadis/vscode-hl2.git",
     "icon": "icon.png",
@@ -19,7 +19,7 @@
     "activationEvents": [
         "*"
     ],
-    "main": "./src/extension.js",
+    "main": "./dist/extension.js",
     "contributes": {
         "commands": [
             {
@@ -77,10 +77,14 @@
         }
     },
     "scripts": {
+        "vscode:prepublish": "webpack --mode production",
         "postinstall": "electron-builder install-app-deps",
-        "test": "node ./test/runTest.js",
         "pack": "electron-builder --dir",
-        "dist": "electron-builder"
+        "dist": "electron-builder",
+        "webpack": "webpack --mode development",
+        "webpack-dev": "webpack --mode development --watch",
+        "test": "node ./test/runTest.js",
+        "test-compile": "tsc -p ./"
     },
     "devDependencies": {
         "@types/glob": "^7.1.1",
@@ -97,7 +101,10 @@
         "mocha": "^6.1.4",
         "prebuild-install": "^2.4.1",
         "typescript": "^3.3.1",
-        "vscode-test": "^1.2.0"
+        "vscode-test": "^1.2.0",
+        "webpack": "4.41.3",
+        "webpack-cli": "3.3.10",
+        "ts-loader": "6.2.1"
     },
     "dependencies": {
         "electron-builder": "^21.2.0",
@@ -106,6 +113,6 @@
         "python-shell": "1.0.8",
         "semver": "6.3.0",
         "serialport": "^8.0.5",
-        "node-crc": "1.2.2"
+        "crc": "3.8.0"
     }
 }
