--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "hl2",
     "displayName": "hepiaLight2",
     "description": "Run Python code on hepiaLight2",
-    "version": "0.4.5",
+    "version": "0.4.12",
     "publisher": "orpheeantoniadis",
     "repository": "https://github.com/orpheeantoniadis/vscode-hl2.git",
     "icon": "icon.png",
@@ -78,7 +78,7 @@
     },
     "scripts": {
         "vscode:prepublish": "webpack --mode production",
-        "postinstall": "electron-builder install-app-deps",
+        "postinstall": "electron-builder install-app-deps && electron-rebuild",
         "pack": "electron-builder --dir",
         "dist": "electron-builder",
         "webpack": "webpack --mode development",
