--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "hl2",
     "displayName": "hepiaLight2",
     "description": "Run Python code on hepiaLight2",
-    "version": "0.4.12",
+    "version": "0.4.17",
     "publisher": "orpheeantoniadis",
     "repository": "https://github.com/orpheeantoniadis/vscode-hl2.git",
     "icon": "icon.png",
@@ -78,7 +78,7 @@
     },
     "scripts": {
         "vscode:prepublish": "webpack --mode production",
-        "postinstall": "electron-builder install-app-deps && electron-rebuild",
+        "postinstall": "node_modules/.bin/electron-builder install-app-deps",
         "pack": "electron-builder --dir",
         "dist": "electron-builder",
         "webpack": "webpack --mode development",
@@ -108,7 +108,10 @@
     },
     "dependencies": {
         "crc": "3.8.0",
+        "electron": "^6.1.6",
+        "electron-builder": "^21.2.0",
         "glob": "^7.1.4",
+        "prebuild-install": "^2.4.1",
         "semver": "6.3.0",
         "serialport": "^8.0.5"
     }
