--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "hl2",
     "displayName": "hepiaLight2",
     "description": "hepiaLight2 for Visual Studio Code",
-    "version": "0.6.2",
+    "version": "0.6.3",
     "publisher": "orpheeantoniadis",
     "repository": "https://github.com/orpheeantoniadis/vscode-hl2.git",
     "icon": "resources/images/logo.png",
@@ -101,6 +101,7 @@
                     "group": "navigation"
                 },
                 {
+                    "when": "resourceLangId == python",
                     "command": "hl2.update",
                     "group": "navigation"
                 },
