--- a/.vscodeignore
+++ b/.vscodeignore
@@ -4,6 +4,11 @@
 .eslintrc.json
 .babelrc
 jsconfig.json
+webpack.config.js
+
+# Sources
+out/**
+src/**
 
 # Transpiler mapping files 
 **/*.map
@@ -16,46 +21,11 @@ test/**
 vsc-extension-quickstart.md
 
 # Modules
+node_modules/**
 native_modules
-
-# Modules readme and changelog 
-node_modules/**/README.md
-node_modules/**/Readme.md
-node_modules/**/README.markdown
-node_modules/**/CHANG*.md
-node_modules/**/CODE_OF_CONDUCT.md
-node_modules/**/CONTRIBUTING.md
-node_modules/**/contributing.md
-node_modules/**/history.md
-node_modules/**/*_TEMPLATE.md
-node_modules/**/usage.txt
-node_modules/**/readme.md
-node_modules/**/readme.markdown
-node_modules/**/History.md
-node_modules/**/Readme.md
-node_modules/**/GOVERNANCE.md
-node_modules/**/AUTHORS
-node_modules/**/AUTHORS.md
-node_modules/**/OWNERS
-
-# Modules backup files
-node_modules/**/*.md~
-node_modules/**/*.bak
-
-# Modules tests 
-node_modules/**/test
-node_modules/**/mocha.opts
-node_modules/**/.coveralls.yml
-node_modules/mute-stream/coverage
-node_modules/**/test.js
-node_modules/**/test.log
-
-# Modules examples 
-node_modules/**/examples
-
-# Modules config files for linters / editors / travis
-node_modules/**/.travis.yml
-node_modules/**/.eslintrc
-node_modules/**/.editorconfig
-node_modules/**/.jshintrc
-node_modules/**/.nyc_output
+!node_modules/@serialport
+!node_modules/bindings
+!node_modules/debug
+!node_modules/file-uri-to-path
+!node_modules/ms
+!node_modules/serialport
