--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "activationEvents": [
         "*"
     ],
-    "main": "./hl2",
+    "main": "./dist/hl2",
     "contributes": {
         "commands": [
             {
@@ -120,7 +120,9 @@
         "build-dev": "babel src --out-dir lib --source-maps --watch",
         "package-prep": "npm install vsce -g",
         "package": "vsce package",
-        "vscode:prepublish": "npm ci && npm prune"
+        "vscode:prepublish": "npm ci && npm prune && webpack --mode production",
+        "webpack": "webpack --mode development",
+        "webpack-dev": "webpack --mode development --watch"
     },
     "backup-required-to-include-binaries": {
         "postinstall": "pwsh -nop -f ./scripts/mp-download.ps1 -copyonly",
@@ -167,6 +169,9 @@
         "eslint": "^6.7.1",
         "mocha": "^6.2.2",
         "prebuild-install": "^5.3.3",
-        "vscode": "^1.1.36"
+        "ts-loader": "^6.2.2",
+        "vscode": "^1.1.36",
+        "webpack": "^4.42.1",
+        "webpack-cli": "^3.3.11"
     }
 }
